--- a/src/components/_condition.html
+++ b/src/components/_condition.html
@@ -224,85 +224,85 @@
                             <div class="condition__slider-image">
                                 <img src="../assets/images/sections/condition/lexus.png" alt="" />
                             </div>
-                            <p>LEXUS RX 350</p>
+                            <p class="condition__slider-heading">LEXUS RX 350</p>
                         </a>
                         <a href="#" class="condition__slider-slide swiper-slide">
                             <div class="condition__slider-image">
                                 <img src="../assets/images/sections/condition/suzuki.png" alt="" />
                             </div>
-                            <p>SUZUKI JIMNY</p>
+                            <p class="condition__slider-heading">SUZUKI JIMNY</p>
                         </a>
                         <a href="#" class="condition__slider-slide swiper-slide">
                             <div class="condition__slider-image">
                                 <img src="../assets/images/sections/condition/prado.png" alt="" />
                             </div>
-                            <p>TLC PRADO 19</p>
+                            <p class="condition__slider-heading">TLC PRADO 19</p>
                         </a>
                         <a href="#" class="condition__slider-slide swiper-slide">
                             <div class="condition__slider-image">
                                 <img src="../assets/images/sections/condition/subaru.png" alt="" />
                             </div>
-                            <p>SUBARU FORESTER</p>
+                            <p class="condition__slider-heading">SUBARU FORESTER</p>
                         </a>
                         <a href="#" class="condition__slider-slide swiper-slide">
                             <div class="condition__slider-image">
                                 <img src="../assets/images/sections/condition/hyndai.png" alt="" />
                             </div>
-                            <p>HYUNDAI SOLARIS</p>
+                            <p class="condition__slider-heading">HYUNDAI SOLARIS</p>
                         </a>
                         <a href="#" class="condition__slider-slide swiper-slide">
                             <div class="condition__slider-image">
                                 <img src="../assets/images/sections/condition/toyota.png" alt="" />
                             </div>
-                            <p>TOYOTA FIELDER</p>
+                            <p class="condition__slider-heading">TOYOTA FIELDER</p>
                         </a>
                         <a href="#" class="condition__slider-slide swiper-slide">
                             <div class="condition__slider-image">
                                 <img src="../assets/images/sections/condition/toyota-v2.png" alt="" />
                             </div>
-                            <p>TOYOTA C-HR</p>
+                            <p class="condition__slider-heading">TOYOTA C-HR</p>
                         </a>
                         <a href="#" class="condition__slider-slide swiper-slide">
                             <div class="condition__slider-image">
                                 <img src="../assets/images/sections/condition/lexus.png" alt="" />
                             </div>
-                            <p>LEXUS RX 350</p>
+                            <p class="condition__slider-heading">LEXUS RX 350</p>
                         </a>
                         <a href="#" class="condition__slider-slide swiper-slide">
                             <div class="condition__slider-image">
                                 <img src="../assets/images/sections/condition/suzuki.png" alt="" />
                             </div>
-                            <p>SUZUKI JIMNY</p>
+                            <p class="condition__slider-heading">SUZUKI JIMNY</p>
                         </a>
                         <a href="#" class="condition__slider-slide swiper-slide">
                             <div class="condition__slider-image">
                                 <img src="../assets/images/sections/condition/prado.png" alt="" />
                             </div>
-                            <p>TLC PRADO 19</p>
+                            <p class="condition__slider-heading">TLC PRADO 19</p>
                         </a>
                         <a href="#" class="condition__slider-slide swiper-slide">
                             <div class="condition__slider-image">
                                 <img src="../assets/images/sections/condition/subaru.png" alt="" />
                             </div>
-                            <p>SUBARU FORESTER</p>
+                            <p class="condition__slider-heading">SUBARU FORESTER</p>
                         </a>
                         <a href="#" class="condition__slider-slide swiper-slide">
                             <div class="condition__slider-image">
                                 <img src="../assets/images/sections/condition/hyndai.png" alt="" />
                             </div>
-                            <p>HYUNDAI SOLARIS</p>
+                            <p class="condition__slider-heading">HYUNDAI SOLARIS</p>
                         </a>
                         <a href="#" class="condition__slider-slide swiper-slide">
                             <div class="condition__slider-image">
                                 <img src="../assets/images/sections/condition/toyota.png" alt="" />
                             </div>
-                            <p>TOYOTA FIELDER</p>
+                            <p class="condition__slider-heading">TOYOTA FIELDER</p>
                         </a>
                         <a href="#" class="condition__slider-slide swiper-slide">
                             <div class="condition__slider-image">
                                 <img src="../assets/images/sections/condition/toyota-v2.png" alt="" />
                             </div>
-                            <p>TOYOTA C-HR</p>
+                            <p class="condition__slider-heading">TOYOTA C-HR</p>
                         </a>
                     </div>
                     <div class="condition__slider-navigation _desktop-only">
