--- a/src/components/header.html
+++ b/src/components/header.html
@@ -82,8 +82,8 @@
             <a href="#" class="header__link txt">Контакты</a>
             <div class="header__select-lang select-lang">
                 <select data-show-selection>
-                    <option value="1" >ru</option>
-                    <option value="2" selected>eng</option>
+                    <option value="1" selected>ru</option>
+                    <option value="2" >eng</option>
                 </select>
             </div>
             <a href="tel:74242490725" class="header__tel"
