--- a/src/scss/sections/_choose.scss
+++ b/src/scss/sections/_choose.scss
@@ -136,8 +136,16 @@
         width: 100%;
 
         ._is-passed & {
+            &:not(&._is-animating) {
+                &::before {
+                    opacity: 1;
+                }
+            }
+        }
+
+        &._is-animating {
             &::before {
-                opacity: 1;
+                opacity: 0;
             }
         }
 
@@ -153,6 +161,7 @@
             background-size: contain;
             background-repeat: no-repeat;
             opacity: var(--whiteGradientOpacity);
+            transition: opacity 0.4s ease;
 
             @media (max-width: 48em) {
                 top: -14rem;
@@ -170,17 +179,10 @@
             padding-left: 5rem;
             justify-self: center;
 
-            &:not(&._prev-slide) {
-                &._is-animating {
-                    .choose__heading-wrap {
-                        opacity: 0;
-                    }
-                }
-            }
 
-            &._prev-slide {
-                &::before {
-                    opacity: 1;
+            &._is-animating {
+                .choose__heading-wrap {
+                    opacity: 0;
                 }
             }
         }
@@ -228,7 +230,7 @@
                 opacity: 0;
                 pointer-events: none;
                 transition:
-                    transform 0.5s ease,
+                    transform 0.6s ease,
                     opacity 0.3s ease;
 
                 &:not(&.swiper-slide-prev, &.swiper-slide-active, &.swiper-slide-next) {
@@ -240,9 +242,12 @@
                     opacity: 1;
                     transform: scale(1);
 
-                    &:not(._prev-slide &) {
                         transition-delay: 0.2s;
+
+                    ._prev-slide & {
+                        transition: transform 0.6s ease 0.3s, opacity 0.3s ease;
                     }
+
                 }
 
                 &._is-prev {
@@ -250,12 +255,12 @@
                     opacity: 0;
                     transition:
                         opacity 0.3s ease,
-                        transform 0.5s ease;
+                        transform 0.6s ease;
 
                     &:not(._prev-slide &) {
                         transition:
                             opacity 0.3s ease 1s,
-                            transform 0.5s ease;
+                            transform 0.6s ease;
                     }
                     ._prev-slide & {
                         display: none;
@@ -266,6 +271,9 @@
                     transform: scale(0.33) translate(199rem, 2rem);
                     pointer-events: all;
                     cursor: pointer;
+                    transition:
+                            transform 0.6s ease,
+                            opacity 0.3s ease;
 
                     &.swiper-slide-next {
                         z-index: 2;
@@ -342,7 +350,7 @@
                     }
                     svg path {
                         fill: none;
-                        stroke: $white;
+                        stroke: $orange;
                     }
                 }
             }
@@ -422,11 +430,7 @@
         width: 90rem;
         transform: translate(-7rem, 0.3rem);
         text-align: center;
-        transition: opacity 0.3s ease;
-
-        ._prev-slide & {
-            opacity: 1;
-        }
+        transition: opacity 0.4s ease;
 
         @media (max-width: 48em) {
             margin-bottom: 3.4rem;
