--- a/src/ui/styles/_icon.scss
+++ b/src/ui/styles/_icon.scss
@@ -11,6 +11,7 @@
         inset 0.32rem 0.32rem 0.16rem rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(0.5rem);
     overflow: hidden;
+    transition: background-color 0.3s ease;
 
     &::before,
     &::after {
@@ -33,7 +34,7 @@
         left: 0;
         height: 100%;
         width: 100%;
-        background: linear-gradient(180deg, rgb(255, 108, 0.5) 21.64%, rgb(255, 108, 1) 69.31%);
+        background-color: rgba(255, 108, 1, 0.4);
         opacity: 0;
         backdrop-filter: blur(0.8rem);
         transition: opacity 0.3s ease;
@@ -99,14 +100,28 @@
         }
     }
 
+    &:not(&._is-disabled, &._no-hover) {
+        &:active {
+            box-shadow: inset 0 -0.16rem 0.8rem #9E4504, inset 0.32rem 0.32rem 0.16rem #FF6C00;
+            &::after {
+                opacity: 1;
+                background: rgba(255, 108, 1, 1);
+            }
+            &::before {
+                opacity: 0;
+            }
+
+            svg path {
+                fill: $white;
+            }
+        }
+    }
+
     @media (any-hover: hover) {
         &:not(&._is-disabled, &._no-hover) {
             &:hover {
                 &::after {
                     opacity: 1;
-                }
-                svg path {
-                    fill: $white;
                 }
             }
         }
