feat: news page

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,6 +9,7 @@ $white: #ffffff;
 $black: #111316;
 $bgColor: #191c20;
 $gray: #6f6f6f;
+$gray-secondary: rgba(255, 255, 255, 0.5);
 $orange: #ff6c01;
 $red: #e20707;
 
