feat: promotion page

--- a/src/components/_news.html
+++ b/src/components/_news.html
@@ -32,220 +32,217 @@
             </nav>
 
             <ul class="news__articles">
-                <li class="news__article">
+                <li class="news-card">
                     <a href="">
-                        <figure class="news__article-image">
+                        <figure class="news-card__image">
                             <img src="./assets/images/sections/news/article-image-1.png" alt="" />
                         </figure>
 
-                        <div class="news__article-content">
-                            <span class="news__article-category">акция</span>
+                        <div class="news-card__content">
+                            <span class="news-card__category">акция</span>
 
-                            <strong class="news__article-title"> СЕЗОННАЯ АКЦИЯ "23+7" </strong>
+                            <strong class="news-card__title"> СЕЗОННАЯ АКЦИЯ "23+7" </strong>
 
-                            <p class="news__article-description">
+                            <p class="news-card__description">
                                 Срок проведения - с 20 октября 2023 по 15 апреля 2024
                             </p>
-                            <p class="news__article-description">
+                            <p class="news-card__description">
                                 Автомобиль участвующий в акции - TOYOTA RAV4 2020
                             </p>
 
-                            <button class="news__article-link btn">
+                            <button class="news-card__link btn">
                                 <span class="btn__txt"> Подробнее </span>
                             </button>
                         </div>
                     </a>
                 </li>
-                <li class="news__article">
+                <li class="news-card">
                     <a href="">
-                        <figure class="news__article-image">
+                        <figure class="news-card__image">
                             <img src="./assets/images/sections/news/article-image-2.png" alt="" />
                         </figure>
 
-                        <div class="news__article-content">
-                            <span class="news__article-category">акция</span>
+                        <div class="news-card__content">
+                            <span class="news-card__category">акция</span>
 
-                            <strong class="news__article-title"> СЕЗОННАЯ АКЦИЯ "23+7" </strong>
+                            <strong class="news-card__title"> СЕЗОННАЯ АКЦИЯ "23+7" </strong>
 
-                            <p class="news__article-description">
+                            <p class="news-card__description">
                                 Срок проведения - с 20 октября 2023 по 15 апреля 2024
                             </p>
-                            <p class="news__article-description">
-                                Автомобиль участвующий в акции - TOYOTA LAND
-                                CRUISER PRADO 2017г
+                            <p class="news-card__description">
+                                Автомобиль участвующий в акции - TOYOTA LAND CRUISER PRADO 2017г
                             </p>
 
-                            <button class="news__article-link btn">
+                            <button class="news-card__link btn">
                                 <span class="btn__txt"> Подробнее </span>
                             </button>
                         </div>
                     </a>
                 </li>
-                <li class="news__article">
+                <li class="news-card">
                     <a href="">
-                        <figure class="news__article-image">
+                        <figure class="news-card__image">
                             <img src="./assets/images/sections/news/article-image-3.png" alt="" />
                         </figure>
 
-                        <div class="news__article-content">
-                            <span class="news__article-category">акция</span>
+                        <div class="news-card__content">
+                            <span class="news-card__category">акция</span>
 
-                            <strong class="news__article-title"> СЕЗОННАЯ АКЦИЯ "23+7" </strong>
+                            <strong class="news-card__title"> СЕЗОННАЯ АКЦИЯ "23+7" </strong>
 
-                            <p class="news__article-description">
+                            <p class="news-card__description">
                                 Срок проведения - с 20 октября 2023 по 15 апреля 2024
                             </p>
-                            <p class="news__article-description">
+                            <p class="news-card__description">
                                 Автомобиль участвующий в акции - TOYOTA RAV4 2020
                             </p>
 
-                            <button class="news__article-link btn">
+                            <button class="news-card__link btn">
                                 <span class="btn__txt"> Подробнее </span>
                             </button>
                         </div>
                     </a>
                 </li>
-                <li class="news__article">
+                <li class="news-card">
                     <a href="">
-                        <figure class="news__article-image">
+                        <figure class="news-card__image">
                             <img src="./assets/images/sections/news/article-image-1.png" alt="" />
                         </figure>
 
-                        <div class="news__article-content">
-                            <span class="news__article-category">акция</span>
+                        <div class="news-card__content">
+                            <span class="news-card__category">акция</span>
 
-                            <strong class="news__article-title"> СЕЗОННАЯ АКЦИЯ "23+7" </strong>
+                            <strong class="news-card__title"> СЕЗОННАЯ АКЦИЯ "23+7" </strong>
 
-                            <p class="news__article-description">
+                            <p class="news-card__description">
                                 Срок проведения - с 20 октября 2023 по 15 апреля 2024
                             </p>
-                            <p class="news__article-description">
+                            <p class="news-card__description">
                                 Автомобиль участвующий в акции - TOYOTA RAV4 2020
                             </p>
 
-                            <button class="news__article-link btn">
+                            <button class="news-card__link btn">
                                 <span class="btn__txt"> Подробнее </span>
                             </button>
                         </div>
                     </a>
                 </li>
-                <li class="news__article">
+                <li class="news-card">
                     <a href="">
-                        <figure class="news__article-image">
+                        <figure class="news-card__image">
                             <img src="./assets/images/sections/news/article-image-2.png" alt="" />
                         </figure>
 
-                        <div class="news__article-content">
-                            <span class="news__article-category">акция</span>
+                        <div class="news-card__content">
+                            <span class="news-card__category">акция</span>
 
-                            <strong class="news__article-title"> СЕЗОННАЯ АКЦИЯ "23+7" </strong>
+                            <strong class="news-card__title"> СЕЗОННАЯ АКЦИЯ "23+7" </strong>
 
-                            <p class="news__article-description">
+                            <p class="news-card__description">
                                 Срок проведения - с 20 октября 2023 по 15 апреля 2024
                             </p>
-                            <p class="news__article-description">
-                                Автомобиль участвующий в акции - TOYOTA LAND
-                                CRUISER PRADO 2017г
+                            <p class="news-card__description">
+                                Автомобиль участвующий в акции - TOYOTA LAND CRUISER PRADO 2017г
                             </p>
 
-                            <button class="news__article-link btn">
+                            <button class="news-card__link btn">
                                 <span class="btn__txt"> Подробнее </span>
                             </button>
                         </div>
                     </a>
                 </li>
-                <li class="news__article">
+                <li class="news-card">
                     <a href="">
-                        <figure class="news__article-image">
+                        <figure class="news-card__image">
                             <img src="./assets/images/sections/news/article-image-3.png" alt="" />
                         </figure>
 
-                        <div class="news__article-content">
-                            <span class="news__article-category">акция</span>
+                        <div class="news-card__content">
+                            <span class="news-card__category">акция</span>
 
-                            <strong class="news__article-title"> СЕЗОННАЯ АКЦИЯ "23+7" </strong>
+                            <strong class="news-card__title"> СЕЗОННАЯ АКЦИЯ "23+7" </strong>
 
-                            <p class="news__article-description">
+                            <p class="news-card__description">
                                 Срок проведения - с 20 октября 2023 по 15 апреля 2024
                             </p>
-                            <p class="news__article-description">
+                            <p class="news-card__description">
                                 Автомобиль участвующий в акции - TOYOTA RAV4 2020
                             </p>
 
-                            <button class="news__article-link btn">
+                            <button class="news-card__link btn">
                                 <span class="btn__txt"> Подробнее </span>
                             </button>
                         </div>
                     </a>
                 </li>
-                <li class="news__article">
+                <li class="news-card">
                     <a href="">
-                        <figure class="news__article-image">
+                        <figure class="news-card__image">
                             <img src="./assets/images/sections/news/article-image-1.png" alt="" />
                         </figure>
 
-                        <div class="news__article-content">
-                            <span class="news__article-category">акция</span>
+                        <div class="news-card__content">
+                            <span class="news-card__category">акция</span>
 
-                            <strong class="news__article-title"> СЕЗОННАЯ АКЦИЯ "23+7" </strong>
+                            <strong class="news-card__title"> СЕЗОННАЯ АКЦИЯ "23+7" </strong>
 
-                            <p class="news__article-description">
+                            <p class="news-card__description">
                                 Срок проведения - с 20 октября 2023 по 15 апреля 2024
                             </p>
-                            <p class="news__article-description">
+                            <p class="news-card__description">
                                 Автомобиль участвующий в акции - TOYOTA RAV4 2020
                             </p>
 
-                            <button class="news__article-link btn">
+                            <button class="news-card__link btn">
                                 <span class="btn__txt"> Подробнее </span>
                             </button>
                         </div>
                     </a>
                 </li>
-                <li class="news__article">
+                <li class="news-card">
                     <a href="">
-                        <figure class="news__article-image">
+                        <figure class="news-card__image">
                             <img src="./assets/images/sections/news/article-image-2.png" alt="" />
                         </figure>
 
-                        <div class="news__article-content">
-                            <span class="news__article-category">акция</span>
+                        <div class="news-card__content">
+                            <span class="news-card__category">акция</span>
 
-                            <strong class="news__article-title"> СЕЗОННАЯ АКЦИЯ "23+7" </strong>
+                            <strong class="news-card__title"> СЕЗОННАЯ АКЦИЯ "23+7" </strong>
 
-                            <p class="news__article-description">
+                            <p class="news-card__description">
                                 Срок проведения - с 20 октября 2023 по 15 апреля 2024
                             </p>
-                            <p class="news__article-description">
-                                Автомобиль участвующий в акции - TOYOTA LAND
-                                CRUISER PRADO 2017г
+                            <p class="news-card__description">
+                                Автомобиль участвующий в акции - TOYOTA LAND CRUISER PRADO 2017г
                             </p>
 
-                            <button class="news__article-link btn">
+                            <button class="news-card__link btn">
                                 <span class="btn__txt"> Подробнее </span>
                             </button>
                         </div>
                     </a>
                 </li>
-                <li class="news__article">
+                <li class="news-card">
                     <a href="">
-                        <figure class="news__article-image">
+                        <figure class="news-card__image">
                             <img src="./assets/images/sections/news/article-image-3.png" alt="" />
                         </figure>
 
-                        <div class="news__article-content">
-                            <span class="news__article-category">акция</span>
+                        <div class="news-card__content">
+                            <span class="news-card__category">акция</span>
 
-                            <strong class="news__article-title"> СЕЗОННАЯ АКЦИЯ "23+7" </strong>
+                            <strong class="news-card__title"> СЕЗОННАЯ АКЦИЯ "23+7" </strong>
 
-                            <p class="news__article-description">
+                            <p class="news-card__description">
                                 Срок проведения - с 20 октября 2023 по 15 апреля 2024
                             </p>
-                            <p class="news__article-description">
+                            <p class="news-card__description">
                                 Автомобиль участвующий в акции - TOYOTA RAV4 2020
                             </p>
 
-                            <button class="news__article-link btn">
+                            <button class="news-card__link btn">
                                 <span class="btn__txt"> Подробнее </span>
                             </button>
                         </div>
