--- a/src/scss/sections/_contact.scss
+++ b/src/scss/sections/_contact.scss
@@ -10,7 +10,7 @@
         text-transform: uppercase;
         font-weight: 500;
 
-        @include small-tablet{
+        @include small-tablet {
             margin-bottom: 8rem;
             font-weight: 500;
             font-size: 4rem;
@@ -26,8 +26,8 @@
         gap: 4rem;
         position: relative;
 
-        &::after{
-            @include pseudo{
+        &::after {
+            @include pseudo {
                 z-index: -1;
                 width: 18.6rem;
                 height: 9.6rem;
@@ -39,7 +39,7 @@
             }
         }
 
-        @include small-tablet{
+        @include small-tablet {
             flex-direction: column-reverse;
             gap: 12rem;
         }
@@ -50,7 +50,7 @@
         align-items: center;
         justify-content: space-between;
 
-        @include small-tablet{
+        @include small-tablet {
             flex-direction: column;
             gap: 4.8rem;
         }
@@ -61,7 +61,7 @@
         align-items: flex-start;
         gap: 4rem;
 
-        @include small-tablet{
+        @include small-tablet {
             flex-direction: column;
             gap: 4.8rem;
         }
@@ -74,7 +74,7 @@
             flex-direction: column;
             gap: 1.6rem;
 
-            @include small-tablet{
+            @include small-tablet {
                 max-width: 85%;
                 gap: 2.4rem;
             }
@@ -84,7 +84,7 @@
                 line-height: 140%;
                 color: $white;
 
-                @include small-tablet{
+                @include small-tablet {
                     font-weight: 500;
                     font-size: 3.6rem;
                     line-height: 140%;
@@ -99,7 +99,7 @@
                     text-transform: uppercase;
                     color: $gray;
 
-                    @include small-tablet{
+                    @include small-tablet {
                         font-weight: 400;
                         font-size: 3.2rem;
                         line-height: 110%;
@@ -118,7 +118,7 @@
         align-self: flex-end;
         margin-top: -3rem;
 
-        @include small-tablet{
+        @include small-tablet {
             align-self: flex-start;
             margin-top: 0;
         }
@@ -131,9 +131,10 @@
         top: 12rem;
         height: 58rem;
         background-color: $gray;
-        z-index: 0;
-        
-        @include small-tablet{
+        z-index: 1;
+        cursor: grab;
+
+        @include small-tablet {
             position: initial;
             height: 109rem;
             margin-bottom: 7rem;
@@ -149,7 +150,7 @@
     // .contact-form__inner
 
     &__btn {
-        @include small-tablet{
+        @include small-tablet {
             width: 100%;
 
             button {
@@ -159,7 +160,7 @@
         }
     }
 
-    @include small-tablet{
+    @include small-tablet {
         width: 100%;
     }
 
@@ -202,9 +203,7 @@
         position: relative;
         z-index: 1;
 
-
-
-        @include small-tablet{
+        @include small-tablet {
             gap: 7.5rem;
         }
 
@@ -212,7 +211,7 @@
         textarea::placeholder {
             text-transform: uppercase;
 
-            @include small-tablet{
+            @include small-tablet {
                 font-size: 3rem;
                 line-height: 160%;
                 letter-spacing: 0.08em;
@@ -223,7 +222,7 @@
         textarea {
             height: 9.2rem;
 
-            @include small-tablet{
+            @include small-tablet {
                 height: 14rem;
             }
         }
@@ -234,7 +233,7 @@
         align-items: center;
         justify-content: space-between;
 
-        @include small-tablet{
+        @include small-tablet {
             flex-direction: column;
             align-items: flex-start;
             gap: 6.4rem;
@@ -249,7 +248,7 @@
 
             max-width: 24.6rem;
 
-            @include small-tablet{
+            @include small-tablet {
                 max-width: 85%;
                 font-weight: 400;
                 font-size: 2.8rem;
