--- a/src/scss/sections/_hero.scss
+++ b/src/scss/sections/_hero.scss
@@ -33,6 +33,10 @@
             left: -33rem;
             width: 176%;
             height: 69%;
+
+            img {
+                transform: translate3d(0, calc(var(--scrollY) / 8), 0);
+            }
         }
     }
 
@@ -57,6 +61,8 @@
         @media (max-width: 48em) {
             width: 104%;
             background-position: -45rem -21rem;
+            background-attachment: fixed;
+            transform: none;
         }
     }
 
@@ -121,6 +127,8 @@
         @media (max-width: 48em) {
             max-width: 56rem;
             font-size: 3.6rem;
+            transform: translate3d(0, calc(var(--scrollY) / 5), 0);
+            transition: transform 0.1s ease;
         }
     }
 
@@ -141,6 +149,8 @@
             margin-bottom: 4.2rem;
             max-width: none;
             font-size: 4.4rem;
+            transform: translate3d(0, calc(var(--scrollY) / 5), 0);
+            transition: transform 0.1s ease;
 
             span {
                 display: inline-block;
@@ -161,6 +171,8 @@
             margin-bottom: 3.4rem;
             font-size: 3rem;
             line-height: 3.3rem;
+            transform: translate3d(0, calc(var(--scrollY) / 5), 0);
+            transition: transform 0.1s ease;
         }
     }
 
@@ -193,12 +205,11 @@
         bottom: 0;
         left: 50%;
         width: 109%;
-        transform: translateX(-50%);
 
 
         @media (min-width: 48em) {
             width: 102rem;
-            transform: translate(0rem, 9.5rem);
+            transform: translateY(9.5rem);
         }
     }
 
@@ -208,6 +219,10 @@
         object-fit: contain;
         transform: translate3d(0, calc(var(--scrollY) / 5), 0);
         will-change: contents;
+
+        @media (max-width: 48em) {
+            transform: translate3d(0, calc(var(--scrollY) / 9), 0);
+        }
     }
 
     // .hero__anchor
