--- a/src/scss/sections/header.scss
+++ b/src/scss/sections/header.scss
@@ -12,6 +12,7 @@
         ._menu-opened & {
             &::before {
                 opacity: 1;
+                transform: translateX(0);
             }
         }
 
@@ -25,6 +26,7 @@
             height: 100%;
             background-color: rgba(25, 28, 32, 1);
             opacity: 0;
+            transform: translateX(-110%);
             transition: opacity 0.3s ease;
         }
     }
