--- a/src/ui/styles/ui.scss
+++ b/src/ui/styles/ui.scss
@@ -21,3 +21,12 @@
 
 // showmore
 @import './showmore';
+
+// item card
+@import './item-card';
+
+// dropdown
+@import './dropdown';
+
+// showmore button
+@import './showmore-btn';
