add: contacts page

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -26,9 +26,10 @@
                     </ul>
                 </div>
                 <div class="footer__main-subscription">
-                    <form action="/">
+                    <form data-dev action="#">
                         <div class="input">
                             <input
+                                data-tel-mask
                                 data-validate
                                 data-required
                                 autocomplete="off"
@@ -37,7 +38,6 @@
                                 placeholder="номер телефона"
                                 class="input__field"
                             />
-                            <span class="input__hint txt txt_14">Введите корректный номер</span>
                         </div>
                         <button type="submit" class="btn">
                             <span class="btn__txt">Отправить заявку</span>
