--- a/src/scss/dev/vzmsk1.scss
+++ b/src/scss/dev/vzmsk1.scss
@@ -4,3 +4,4 @@
 @import '../sections/advantages';
 @import '../sections/loader';
 @import '../sections/car-park';
+@import '../sections/application';
