--- a/src/components/_contact.html
+++ b/src/components/_contact.html
@@ -5,7 +5,7 @@
             <div class="contacts__map" id="contacts-map"></div>
             <div class="contacts__wrapper">
                 <article class="contact-form contacts__form">
-                    <form class="contact-form__inner">
+                    <form data-dev action="#" class="contact-form__inner">
                         <h3 class="contact-form__title h h_3">Оставьте заявку</h3>
                         <div class="contact-form__wrapper">
                             <div class="input">
@@ -18,10 +18,11 @@
                                     placeholder="фио"
                                     class="input__field"
                                 />
-                                <span class="input__hint txt txt_14">Введите корректный ФИО</span>
+                                <span class="input__hint txt txt_14">Заполните поле</span>
                             </div>
                             <div class="input">
                                 <input
+                                    data-tel-mask
                                     data-validate
                                     data-required
                                     autocomplete="off"
@@ -30,7 +31,7 @@
                                     placeholder="номер телефона"
                                     class="input__field"
                                 />
-                                <span class="input__hint txt txt_14">Введите корректный номер</span>
+                                <span class="input__hint txt txt_14">Заполните поле</span>
                             </div>
                             <div class="input">
                                 <input
@@ -42,15 +43,18 @@
                                     placeholder="e-mail"
                                     class="input__field"
                                 />
-                                <span class="input__hint txt txt_14">Введите корректный e-mail</span>
+                                <span class="input__hint txt txt_14">Заполните поле</span>
                             </div>
-                            <div class="textarea">
+                            <div class="input textarea">
                                 <textarea
+                                    data-validate
+                                    data-required
                                     name="form[]"
                                     autocomplete="off"
                                     placeholder="Ваше сообщение"
                                     class="input__textarea"
                                 ></textarea>
+                                <span class="input__hint txt txt_14">Заполните поле</span>
                             </div>
                         </div>
                         <div class="contact-form__footer">
