--- a/src/ui/styles/_showmore-btn.scss
+++ b/src/ui/styles/_showmore-btn.scss
@@ -13,4 +13,14 @@
     background-size: contain;
     background-repeat: no-repeat;
   }
+
+  @media (max-width: 48em) {
+    column-gap: 3.2rem;
+
+    &::after {
+      flex: 0 0 3.2rem;
+      width: 3.2rem;
+      height: 3.2rem;
+    }
+  }
 }
