--- a/src/ui/styles/_item-card.scss
+++ b/src/ui/styles/_item-card.scss
@@ -20,6 +20,11 @@
     margin-bottom: 3.5rem;
     height: 14.5rem;
     transition: transform 0.3s ease;
+
+    @media (max-width: 48em) {
+      margin-bottom: 4rem;
+      height: 13.7rem;
+    }
   }
 
   &__image {
@@ -40,11 +45,20 @@
     font-family: 'Druk Wide Cyr';
     line-height: 130%;
     text-transform: uppercase;
+
+    @media (max-width: 48em) {
+      margin-bottom: 1.6rem;
+      font-size: 3rem;
+    }
   }
 
   &__text {
     font-size: 1.6rem;
     line-height: 140%;
     color: #9D9D9D;
+
+    @media (max-width: 48em) {
+      font-size: 3rem;
+    }
   }
 }
